; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_tls_securetransport.c_map_ssl_error.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_tls_securetransport.c_map_ssl_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i64)* @map_ssl_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @map_ssl_error(i32 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  %6 = load i32, i32* %4, align 4
  switch i32 %6, label %18 [
    i32 128, label %7
    i32 131, label %10
    i32 130, label %10
    i32 129, label %11
  ]

7:                                                ; preds = %2
  %8 = load i64, i64* %5, align 8
  %9 = trunc i64 %8 to i32
  store i32 %9, i32* %3, align 4
  br label %20

10:                                               ; preds = %2, %2
  store i32 0, i32* %3, align 4
  br label %20

11:                                               ; preds = %2
  %12 = load i64, i64* %5, align 8
  %13 = icmp ugt i64 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %11
  %15 = load i64, i64* %5, align 8
  %16 = trunc i64 %15 to i32
  store i32 %16, i32* %3, align 4
  br label %20

17:                                               ; preds = %11
  br label %18

18:                                               ; preds = %2, %17
  %19 = load i32, i32* %4, align 4
  store i32 %19, i32* %3, align 4
  br label %20

20:                                               ; preds = %18, %14, %10, %7
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
